AI Integration: Migrate to HF Router, add error handling, .env support, and select supported model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=recipegen
 server.port=8080
-
-spring.ai.ollama.chat.model=gemma3:4b
-
-spring.ai.openai.api-key=YOUR_OPENAI_API_KEY_HERE
-
+spring.ai.openai.api-key=${HUGGINGFACE_API_KEY}
+spring.ai.openai.base-url=https://router.huggingface.co
+spring.ai.openai.chat.options.model=meta-llama/Llama-3.2-3B-Instruct
