--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=recipegen
 server.port=8080
-spring.ai.openai.api-key=${HUGGINGFACE_API_KEY}
-spring.ai.openai.base-url=https://router.huggingface.co
-spring.ai.openai.chat.options.model=meta-llama/Llama-3.2-3B-Instruct
+spring.ai.huggingface.api-key=${HUGGINGFACE_API_KEY}
+spring.ai.huggingface.chat.model=meta-llama/Llama-3.2-3B-Instruct
+spring.ai.huggingface.chat.options.max-tokens=1000
+spring.ai.retry.max-attempts=1
