--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Spring AI HuggingFace -->
+        <!-- Spring AI OpenAI (Using for Hugging Face Router) -->
         <dependency>
             <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-starter-model-huggingface</artifactId>
-            <version>${spring-ai.version}</version>
+            <artifactId>spring-ai-starter-model-openai</artifactId>
         </dependency>
 
 
