--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=recipegen
 server.port=8080
-spring.ai.huggingface.api-key=${HUGGINGFACE_API_KEY}
-spring.ai.huggingface.chat.model=meta-llama/Llama-3.2-3B-Instruct
-spring.ai.huggingface.chat.options.max-tokens=1000
+
+# Hugging Face Router Configuration (Using OpenAI Starter)
+spring.ai.openai.api-key=${HUGGINGFACE_API_KEY}
+spring.ai.openai.base-url=https://router.huggingface.co
+spring.ai.openai.chat.options.model=meta-llama/Llama-3.2-3B-Instruct
+
 spring.ai.retry.max-attempts=1
